--- a/assets/css/components/progress.css
+++ b/assets/css/components/progress.css
@@ -2,4 +2,9 @@
   height: .4rem;
   @apply bg-gray-300;
   @apply rounded-full;
+
+  .progress {
+    height: 100%;
+    border-radius: inherit;
+  }
 }
