--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,3 +1,4 @@
+/* purgecss start ignore */
 @import 'tailwindcss/base';
 @import './base/base.css';
 @import './base/fonts.css';
@@ -12,3 +13,4 @@
 
 
 @import 'tailwindcss/utilities';
+/* purgecss end ignore */
