--- a/assets/css/components/aside.css
+++ b/assets/css/components/aside.css
@@ -1,5 +1,9 @@
 .aside {
   @apply shadow-md;
+  background-image: url('/images/plant.png');
+  background-position: -2rem 108%;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 
 .nav {
