--- a/assets/css/components/cards.css
+++ b/assets/css/components/cards.css
@@ -1,3 +1,13 @@
 .card {
-  @apply py-6 px-10 text-xs rounded-xl shadow-md;
+  @apply pt-6 pb-8 px-10 text-xs rounded-xl shadow-md;
+}
+
+.card-details {
+  height: 0;
+  overflow: hidden;
+  transition: height .2s;
+
+  &.open {
+    height: 100%;
+  }
 }
