--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -7,6 +7,7 @@
 @import './components/aside.css';
 @import './components/bullets.css';
 @import './components/cards.css';
+@import './components/charts.css';
 @import './components/icons.css';
 @import './components/progress.css';
 @import './components/typography.css';
