--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -1,4 +1,6 @@
 @import 'tailwindcss/base';
+@import './base/base.css';
+@import './base/fonts.css';
 
 @import 'tailwindcss/components';
 @import './components/aside.css';
