--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -6,6 +6,7 @@
 @import 'tailwindcss/components';
 @import './components/aside.css';
 @import './components/bullets.css';
+@import './components/buttons.css';
 @import './components/cards.css';
 @import './components/charts.css';
 @import './components/icons.css';
