--- a/assets/css/components/buttons.css
+++ b/assets/css/components/buttons.css
@@ -1,5 +1,10 @@
 .btn {
-  @apply inline-block text-base font-bold text-white bg-primary py-2 px-3 rounded-xl;
+  @apply inline-block;
+  @apply py-2 px-4;
+  @apply text-base font-bold;
+  @apply text-center;
+  @apply text-white bg-primary;
+  @apply rounded-xl;
 
   &:hover {
     @apply bg-primary-dark;
