--- a/assets/css/base/base.css
+++ b/assets/css/base/base.css
@@ -7,6 +7,13 @@ body {
   height: 100vh;
 }
 
+/* Dark mode orkaround */
+.dark {
+  .dark\:invert {
+    filter: invert(1);
+  }
+}
+
 button:focus {
   outline: none;
 }
