--- a/assets/css/components/buttons.css
+++ b/assets/css/components/buttons.css
@@ -1,7 +1,7 @@
 .btn {
   @apply inline-block;
   @apply py-2 px-4;
-  @apply text-base font-bold;
+  @apply text-sm font-semibold;
   @apply text-center;
   @apply text-white bg-primary;
   @apply rounded-xl;
