--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -8,7 +8,7 @@
 @import './components/bullets.css';
 @import './components/buttons.css';
 @import './components/cards.css';
-@import './components/charts.css';
+@import './components/chart.css';
 @import './components/icons.css';
 @import './components/progress.css';
 @import './components/typography.css';
